# ai-coding-reviewer

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE.zh.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GAP_ANALYSIS.md  README.md  action.yml  entrypoint.sh  policy.md  review-policy.example.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ai-review.yml  docker-publish.yml  release.yml
src/: ast.rs  consensus.rs  diff.rs  github.rs  main.rs  policy.rs  prompt.rs  report.rs  telemetry.rs  tools.rs
src/models/: deepseek.rs  minimax.rs  mod.rs  reviewer.rs
