[package]
name = "ai-reviewer"
version = "0.1.0"
edition = "2024"
description = "Production-grade AI-to-AI code review CLI with multi-provider support via Rig"
default-run = "ai-reviewer"

[[bin]]
name = "ai-reviewer"
path = "src/main.rs"

[dependencies]
# ── CLI ──────────────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env"] }

# ── AST / diff parsing ───────────────────────────────────────────────────────
tree-sitter          = "0.24"
tree-sitter-rust     = "0.23"  # Rust grammar
tree-sitter-python   = "0.23"  # Python grammar (extensible)
streaming-iterator   = "0.1"   # required by tree-sitter QueryMatches
diffy                = "0.4"   # unified diff parser

# ── Async runtime & AI providers ─────────────────────────────────────────────
tokio       = { version = "1", features = ["full"] }
rig-core    = "0.9"
async-trait = "0.1"

# ── Serialisation & error handling ───────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = { version = "1", features = ["backtrace"] }
thiserror  = "2"

# ── Utilities ────────────────────────────────────────────────────────────────
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Observability: distributed tracing (OTel) + Prometheus metrics ────────────
opentelemetry            = { version = "0.27", features = ["trace"] }
opentelemetry_sdk        = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp       = { version = "0.27", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry    = "0.28"
prometheus               = "0.13"
reqwest                  = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
# Single, maximally stripped binary for CI containers
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
